--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>uuuurl</title>
 
 	<script src="/js/js.js"></script>
 </head>
