--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>uuuurl</title>
-
+	<link rel="stylesheet" href="css/milligram.min.css">
+	<link rel="stylesheet" href="css/normalize.min.css">
 	<script src="/js/js.js"></script>
 </head>
 <body>
