--- a/functions/views/error.ejs
+++ b/functions/views/error.ejs
@@ -3,13 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>uuuurl(ERROR)</title>
-	<link rel="stylesheet" href="css/milligram.min.css">
-	<link rel="stylesheet" href="css/normalize.min.css">
+	<title>uuuurl - Error</title>
+	<link rel="stylesheet" href="/css/milligram.min.css">
+	<link rel="stylesheet" href="/css/normalize.min.css">
 </head>
-<body>
-	<%= code %>
-	<br>
-	<%= message %>
+<body class="vh-100 flex flex-column">
+	<div class="box p-4">
+		<h1><%= code %></h1>
+		<p><%= message %></p>
+		<a href="/" class="button mt-3">Back to uuuurl</a>
+	</div>
 </body>
 </html>
