Add form validation

--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -15,7 +15,7 @@
 			<form method="POST" action="/link" class="flex flex-column pb-3">
 				<fieldset class="box p-0">
 					<label for="input_url">Type URL to shorten</label>
-					<input type="url" name="url" id="input_url" class="mb-2" placeholder="https://u-rl.ga">
+					<input type="url" name="url" id="input_url" class="mb-2" placeholder="https://u-rl.ga" required>
 					<input type="hidden" name="resType" value="web">
 					<button id="btn_shorten_url" class="button" type="submit">Shorten URL</button>
 				</fieldset>
