Extract head as common

--- a/functions/views/error.ejs
+++ b/functions/views/error.ejs
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>uuuurl - Error</title>
-	<link rel="stylesheet" href="/css/milligram.min.css">
-	<link rel="stylesheet" href="/css/normalize.min.css">
-</head>
+<%- include('common/head', { subtitle: 'Error' }); -%>
 <body class="vh-100 flex flex-column">
 	<div class="box p-4">
 		<h1><%= code %></h1>
