--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>uuuurl</title>
-	<link rel="stylesheet" href="/css/milligram.min.css">
-	<link rel="stylesheet" href="/css/normalize.min.css">
-	<script src="/js/js.js"></script>
-</head>
+<%- include('common/head', { include_js: true }); -%>
 <body class="vh-100">
 	<div class="vh-100 flex flex-column box mx-auto">
 		<div class="p-3">
@@ -77,6 +70,6 @@
 
 		searchAllURLs();
 	</script>
-	<%- include('common_script'); -%>
+	<%- include('common/script'); -%>
 </body>
 </html>
