--- a/functions/views/result.ejs
+++ b/functions/views/result.ejs
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>uuuurl - Result</title>
-	<link rel="stylesheet" href="/css/milligram.min.css">
-	<link rel="stylesheet" href="/css/normalize.min.css">
-</head>
+<%- include('common/head', { subtitle: 'Result' }); -%>
 <body class="vh-100 flex flex-column">
 	<div class="box p-4">
 		<%
@@ -48,7 +42,7 @@
 			a.innerHTML = path;
 			a.setAttribute('href', path);
 		</script>
-		<%- include('common_script'); -%>
+		<%- include('common/script'); -%>
 	<% } %>
 </body>
 </html>
