--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -10,7 +10,7 @@
 					<label for="input_url">Type URL to shorten</label>
 					<input type="url" name="url" id="input_url" class="mb-2" placeholder="https://u-rl.ga" required>
 					<input type="hidden" name="resType" value="web">
-					<button id="btn_shorten_url" class="button" type="submit">Shorten URL</button>
+					<button class="button" type="submit">Shorten URL</button>
 				</fieldset>
 			</form>
 		</div>
@@ -30,7 +30,6 @@
 	<script>
 		let input_url        = document.getElementById('input_url');
 		let form_shorten_url = document.getElementById('form_shorten_url');
-		let btn_shorten_url  = document.getElementById('btn_shorten_url');
 		let url_list         = document.getElementById('url_list');
 
 		const init = async () => {
