Optimize on loading CSS

--- a/functions/views/common/head.ejs
+++ b/functions/views/common/head.ejs
@@ -2,8 +2,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>uuuurl<%= (typeof subtitle !== 'undefined' ? ' - ' + subtitle : '') %></title>
-	<link rel="stylesheet" href="/css/milligram.min.css">
-    <link rel="stylesheet" href="/css/normalize.min.css">
+	<link rel="stylesheet" href="/css/style.min.css">
     <% if (typeof include_js !== 'undefined') { %>
         <script src="/js/js.js"></script>
     <% } %>
