--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -3,7 +3,7 @@
 <%- include('common/head', { include_js: true }); -%>
 <body class="vh-100">
 	<div class="vh-100 flex flex-column box mx-auto">
-		<div class="p-3">
+		<div class="p-3 w-100">
 			<img src="/img/uuuurl_plus.png" alt="uuuurl image">
 			<form method="POST" action="/link" class="flex flex-column pb-3">
 				<fieldset class="box p-0">
