Optimize and show the number of views

--- a/functions/views/admin.ejs
+++ b/functions/views/admin.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('common/head', { subtitle: 'Admin', include_js: true }); -%>
+<%- include('common/head', { subtitle: 'Admin' }); -%>
 <body class="vh-100 flex flex-column">
 	<div class="box p-4">
 		<h1>Admin page</h1>
