--- a/functions/views/common/head.ejs
+++ b/functions/views/common/head.ejs
@@ -1,10 +1,7 @@
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="https://raw.githubusercontent.com/gunhoflash/uuuurl/master/functions/public/img/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>uuuurl<%= (typeof subtitle !== 'undefined' ? ' - ' + subtitle : '') %></title>
 	<link rel="stylesheet" href="/css/style.min.css">
-	<% if (typeof include_js !== 'undefined') { %>
-		<script src="/js/js.js"></script>
-	<% } %>
 </head>
