--- a/functions/views/result.ejs
+++ b/functions/views/result.ejs
@@ -42,7 +42,7 @@
 			a.innerHTML = path;
 			a.setAttribute('href', path);
 		</script>
-		<%- include('common/script'); -%>
+		<%- include('common/clipboard'); -%>
 	<% } %>
 </body>
 </html>
