--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -22,7 +22,8 @@
 	</div>
 	<hr>
 	<footer class="t-center p-4">
-		<a href="https://github.com/gunhoflash/uuuurl" target="_blank" rel="noopener noreferrer">View on Github</a>
+		<a href="https://github.com/gunhoflash/uuuurl" target="_blank" rel="noopener noreferrer" class="button">View on Github</a>
+		<br>
 		gunhoflash@naver.com
 	</footer>
 
